Fix #Error view by adding rule overflow to selector main

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -72,6 +72,7 @@ nav {
 
 main {
 	padding: 20px;
+	overflow: auto;
 }
 
 #content {
